# ckb-ffi

./: Cargo.toml  Makefile  README.md
c-example/: ckb_ffi.h  main.c
src/: ckb.rs  lib.rs  utils.rs
